# generative_agents

./: .gitignore  README.md  README_ZH.md  main.py  pyproject.toml
environment/frontend_server/frontend_server/: urls.py
environment/frontend_server/translator/: views.py
reverie/backend_server/: reverie.py  test.py
reverie/backend_server/persona/prompt_template/: gpt_structure.py
