[project]
name = "generative-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.0,<4.0",
    "aiosignal",
    "asgiref",
    "async-generator",
    "async-timeout",
    "attrs>=25.0,<26.0",
    "boto>=2.0,<3.0",
    "botocore>=1.0,<2.0",
    "certifi",
    "charset-normalizer>=3.0,<4.0",
    "click>=8.0,<9.0",
    "cycler",
    "dj-database-url",
    "Django>=6.0,<7.0",
    "django-cors-headers>=4.0,<5.0",
    "django-storages-redux>=1.0,<2.0",
    "exceptiongroup",
    "frozenlist",
    "gensim>=4.0,<5.0",
    "gunicorn>=23.0,<24.0",
    "h11",
    "idna>=3.0,<4.0",
    "importlib-metadata",
    "jmespath",
    "joblib>=1.1.1,<2.0",
    "kiwisolver",
    "matplotlib>=3.0,<4.0",
    "multidict",
    "nltk>=3.0,<4.0",
    "numpy>=2.0,<3.0",
    "openai>=2.0,<3.0",
    "outcome",
    "packaging",
    "pandas>=2.0,<3.0",
    "patsy",
    "Pillow>=12.0,<13.0",
    "psycopg2-binary>=2.0,<3.0",
    "pycparser",
    "pyparsing>=3.0,<4.0",
    "PySocks>=1.0,<2.0",
    "python-dateutil",
    "python-dotenv>=1.2.1,<2.0",
    "pytz",
    "regex",
    "requests>=2.0,<3.0",
    "s3transfer",
    "scikit-learn>=1.0,<2.0",
    "scikit-posthocs",
    "scipy>=1.0,<2.0",
    "seaborn>=0.13,<1.0",
    "selenium>=4.0,<5.0",
    "six",
    "smart-open>=7.0,<8.0",
    "sniffio",
    "sortedcontainers",
    "sqlparse",
    "statsmodels>=0.14,<1.0",
    "threadpoolctl",
    "tqdm>=4.0,<5.0",
    "trio",
    "trio-websocket",
    "trueskill",
    "typing-extensions",
    "urllib3>=2.0,<3.0",
    "wsproto",
    "yarl",
    "yellowbrick>=1.0,<2.0",
    "zipp",
]
